--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    
+
     margin: 0;
     padding: 0;
 
@@ -60,6 +60,9 @@ form {
 
 #Resultado{
     border: none;
+    font-weight: 600;
+    text-align: center;
+    align-items: center;
     border-radius: 20px;
     color: rgb(255, 255, 255);
     background: rgb(138, 133, 133);
@@ -70,7 +73,6 @@ input, select {
     width: 80%;
     padding: 8px;
     font-size: 1rem;
-    border-radius: 20px;
 }
 
 .botoes {
@@ -83,5 +85,9 @@ input, select {
 button {
     cursor: pointer;
     font-size: 1rem;
+    font-weight: 700;
+    background-color: #ffffff;
     padding: 10px 20px;
+    border-radius: 20px;
+    border: 1px solid black;
 }
